<resources>
    <string name="app_name">Evaluation</string>
    <string name="message_error_load">Algo errado aconteceu. Tente novamente mais tarde.</string>
    <string name="message_comment_prefix">"Comentários de "</string>
    <string name="message_album_prefix">"Albuns de "</string>
    <string name="message_photo_detail_prefix">Foto Detalhe</string>
    <string name="message_photo_prefix">"Fotos de "</string>
    <string name="message_users_prefix">Usuários</string>
    <string name="message_posts_prefix">"Postagens de "</string>
    <string name="message_num_comments_prefix">"Número de comentários: "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_view_phone">Telefone</string>
    <string name="user_view_album">Albuns</string>
    <string name="user_view_posts">Postagens</string>
    <string name="user_view_letter">A</string>
    <string name="user_view_name">Nome</string>
    <string name="user_view_email">Email</string>
    <string name="user_view_username">UsuarioNome</string>
    <string name="photo_view_txt_nome">Nome da foto</string>
    <string name="post_view_letter_A">A</string>
    <string name="album_view_letter_A">A</string>
    <string name="comment_view_letter_A">A</string>
    <string name="foto_detalhe_txt_letter_A">A</string>
    <string name="foto_detalhe_image_detail">image_detail</string>
</resources>